@@ -12,7 +12,7 @@ if DARWIN
 AM_LDFLAGS = -framework CoreFoundation -framework IOKit
 endif
 
-AM_CPPFLAGS = -I$(top_srcdir) -DSYSCONFDIR=\"$(sysconfdir)\" -DPIDFILEDIR=\"$(pidfiledir)\"
+AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/shared -DSYSCONFDIR=\"$(sysconfdir)\" -DPIDFILEDIR=\"$(pidfiledir)\"
 
 
 EXTRA_DIST = $(sysconf_DATA)
