@@ -73,6 +73,7 @@ v.0.5dev (ongoing development)
  + new driver imonlcd for SoundGraph iMON LCD (Dean Harding, Jonathan Kyler)
  * MtxOrb driver: Fix backlight for old firmware
  * Add checks for null pointer / failed malloc to menu code
+ * lcdproc, lcdexec, lcdvc clients: Use our included getopt.h
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
